--- a/pulse-analyser.properties
+++ b/pulse-analyser.properties
@@ -1,2 +1,6 @@
 spring.cloud.stream.bindings.pulseConsumer-in-0.destination=hzcqwkb7-default
 spring.cloud.stream.bindings.pulseConsumer-in-0.group=hzcqwkb7-analyser
+
+spring.cloud.stream.source=jumps;crit-jumps
+spring.cloud.stream.bindings.jumps-out-0.destination=hzcqwkb7-jumps
+spring.cloud.stream.bindings.crit-jumps-out-0.destination=hzcqwkb7-crit-jumps
