--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,6 @@ spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="hzcqwkb7" password="${KAFKA_PASSWORD}";
+
+spring.redis.host=localhost
+spring.redis.port=6379
