--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,7 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+spring.jmx.enabled=true
+management.endpoints.jmx.exposure.include=*
+management.endpoint.shutdown.enabled=true
