--- a/pulse-monitoring-jumps-notifier.properties
+++ b/pulse-monitoring-jumps-notifier.properties
@@ -1,2 +1,10 @@
 spring.cloud.stream.bindings.criticalJumpsConsumer-in-0.destination=hzcqwkb7-crit-jumps
 spring.cloud.stream.bindings.criticalJumpsConsumer-in-0.group=jumps-notifier
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${USER_NAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.debug=true
