--- a/pulse-monitoring-jumps-notifier.properties
+++ b/pulse-monitoring-jumps-notifier.properties
@@ -8,3 +8,5 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.debug=true
+
+app.data.provider.service.host=http://localhost:8080
