--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,5 @@ spring.redis.port=6379
 spring.jmx.enabled=true
 management.endpoints.jmx.exposure.include=*
 management.endpoint.shutdown.enabled=true
+
+spring.data.mongodb.uri=mongodb+srv://checkano:${MONGO_PASSWORD}@cluster0.vhobq.mongodb.net/pulsedb?retryWrites=true&w=majority
